# OS_project

./: .clean.swp  .gitignore  CMakeLists.txt  README.md  make
client_side/: CMakeLists.txt  a.out  client.cpp
client_side/include/: client_utility.h  color.h  command_utility.h  menus.h  string_utility.h  terminal_raw.h
server_side/: CMakeLists.txt  server.c
server_side/lib/: utility.c
server_side/lib/include/: server.h  socket.h  utility.h
