cmake_minimum_required(VERSION 3.0)
project (ChatApp C)
set (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
include_directories (lib/include)
add_library (utility SHARED lib/utility.c)
set (SERVER_SOURCE server.c)
add_executable (server ${SERVER_SOURCE})
target_link_libraries (server utility pthread)
# Copy users to build
file (COPY ${CMAKE_SOURCE_DIR}/server_side/users DESTINATION ${CMAKE_BINARY_DIR})